<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/homeicon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_market"
        android:icon="@drawable/marketicon"
        android:title="@string/title_market" />

    <item
        android:id="@+id/navigation_trade"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_trade" />
    <item
        android:id="@+id/navigation_fund"
        android:icon="@drawable/fundicon"
        android:title="@string/title_fund" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/accounticon"
        android:title="@string/title_account" />

</menu>
