<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ChangePassword"
    android:background="@color/DarkBlueStrip">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/change_password"
                    android:textColor="@color/BluetextLight"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/old_password"
                android:textColor="@color/Background"
                android:textSize="16sp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/edtoldpass"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="3dp"
                android:background="@color/Secondndstrip"
                android:hint="@string/enter_old_password"
                android:inputType="textPassword"
                android:padding="3dp"
                android:textSize="14sp"
                android:textColor="@color/BlackLight"
                android:textColorHint="@color/BlackLight" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/new_password"
                android:textColor="@color/Background"
                android:textSize="16sp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/edtnewpass"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="3dp"
                android:background="@color/Secondndstrip"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword"
                android:padding="3dp"
                android:textSize="14sp"
                android:textColor="@color/BlackLight"
                android:textColorHint="@color/BlackLight" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/confirm_password"
                android:textColor="@color/Background"
                android:textSize="16sp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/edtconfirmpass"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="3dp"
                android:background="@color/Secondndstrip"
                android:hint="@string/enter_new_passeord_again"
                android:inputType="textPassword"
                android:padding="3dp"
                android:textSize="14sp"
                android:textColor="@color/BlackLight"
                android:textColorHint="@color/BlackLight" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/colorAccent"
                android:text="Submit"
                android:textColor="@color/Background"
                android:layout_marginTop="50dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/for_security_purpose_no_withddrawals_are_permitted_for_24_hours_after_modification_of_security_methods"
                android:textColor="@color/Background"
                android:layout_marginTop="50dp"/>


        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>