<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkBlueStrip">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/title_account"
            android:textColor="@color/colorAccent"

            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtuserid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="3dp"
            android:padding="2dp"
            android:paddingLeft="3dp"
            android:text=""
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="2dp"
            android:paddingLeft="3dp"
            android:background="@color/ThirdrdStrip"
            android:text="@string/please_do_not_disclose_sms_and_google_authentication_codes_to_anyone_including_bitoct_customer_support"
            android:textColor="@color/Background" />

        <LinearLayout
            android:id="@+id/llsecurity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/Secondndstrip"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:padding="2dp"
                android:paddingLeft="3dp"
                android:text="@string/security"
                android:textColor="@color/Background"

                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llsupport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/Secondndstrip"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:padding="2dp"
                android:paddingLeft="3dp"
                android:text="@string/support"
                android:textColor="@color/Background" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnlogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/logout"
        android:textColor="@color/Background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.82" />
</android.support.constraint.ConstraintLayout>